<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ble_devices_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/material_margin_medium">

    <TextView
        android:id="@+id/ble_devices_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_device"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ble_devices_item_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_small"
        android:letterSpacing="0.07"
        android:text="@string/example_mac_address"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ble_devices_item_name" />

    <CheckBox
        android:id="@+id/ble_devices_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/material_margin_small"
        android:text="@string/select"
        android:theme="@style/BlueCheckBox"
        app:layout_constraintBaseline_toBaselineOf="@id/ble_devices_item_mac"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>