<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/workout_header"
        android:orientation="horizontal"
        android:paddingStart="@dimen/material_margin_medium"
        android:paddingTop="@dimen/material_margin_large"
        android:paddingEnd="@dimen/material_margin_medium"
        android:paddingBottom="@dimen/material_margin_large">

        <ImageView
            android:id="@+id/plan"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/material_margin_small"
            android:contentDescription="@null"
            android:src="@drawable/ic_runner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasHtmlTextView
            android:id="@+id/workout_headline"
            style="@style/HeadlineTextView.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/material_margin_medium"
            android:text="@string/workout_press_jacket_label" />
    </LinearLayout>

    <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
        android:id="@+id/plan_name"
        style="@style/SectionTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_margin_medium"
        android:text="@string/plan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/material_margin_medium"
            android:text="@string/current_phase" />

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
            android:id="@+id/curr_phase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_medium"
            android:layout_marginBottom="@dimen/material_margin_medium"
            android:text="@string/workout_example_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/material_margin_medium"
            android:text="@string/progress" />

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
            android:id="@+id/plan_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_medium"
            android:layout_marginBottom="@dimen/material_margin_medium"
            android:text="@string/workout_example_value" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/workout_chart"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="@dimen/material_margin_medium" />
</LinearLayout>