<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
        style="@style/HeadlineTextView.White"
        android:id="@+id/home_screen_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/material_margin_large"
        android:layout_marginLeft="@dimen/material_margin_medium"
        android:layout_marginRight="@dimen/material_margin_medium"
        android:layout_marginTop="@dimen/material_margin_medium"
        android:gravity="center_horizontal"
        app:tcTypeface="adineuePROTTRegular"
        android:text="@string/home_instruction_one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_screen_jacket"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/material_margin_medium"
            android:contentDescription="@null"
            android:src="@drawable/ic_jacket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/home_screen_jacket_connect_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_bluetooth_white"
            app:layout_constraintLeft_toRightOf="@+id/home_screen_jacket"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/material_margin_medium"
            android:orientation="vertical">

            <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
                android:id="@+id/home_screen_jacket_name"
                style="@style/SubtitleTextView.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
                android:id="@+id/home_screen_jacket_address"
                style="@style/SubtitleTextView.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mac" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_medium"
        android:layout_marginTop="@dimen/material_margin_large"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_screen_plans"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_plans_training" />

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
            android:id="@+id/home_screen_plans_headline"
            style="@style/SubtitleTextView.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_medium"
            android:text="@string/start_workout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_medium"
        android:layout_marginTop="@dimen/material_margin_medium"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_screen_phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_phone" />

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
            android:id="@+id/home_screen_phone_headline"
            style="@style/SubtitleTextView.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_medium"
            android:text="@string/quick_dial" />
    </LinearLayout>
</LinearLayout>