<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fav_contact_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/workout_header"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/material_margin_large"
        android:paddingEnd="@dimen/material_margin_medium"
        android:paddingStart="@dimen/material_margin_medium"
        android:paddingTop="@dimen/material_margin_large">

        <ImageView
            android:id="@+id/plan"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/material_margin_small"
            android:contentDescription="@null"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.adidas.hackathon.smartjacket.ui.controls.AdidasHtmlTextView
            android:id="@+id/home_workout_summary_headline"
            style="@style/HeadlineTextView.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/material_margin_medium"
            android:text="@string/quick_dial_contact" />
    </LinearLayout>

    <ImageView
        android:id="@+id/contact_screen_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24sp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fav_contact_header_layout" />

    <ImageView
        android:id="@+id/contact_screen_heart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_heart"
        app:layout_constraintCircle="@+id/contact_screen_user"
        app:layout_constraintCircleAngle="40"
        app:layout_constraintCircleRadius="100dp" />

    <com.adidas.hackathon.smartjacket.ui.controls.AdidasTextView
        android:id="@+id/contact_screen_fav_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_small"
        android:text="@string/example_name"
        android:textAllCaps="true"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/contact_screen_heart"
        app:layout_constraintLeft_toRightOf="@id/contact_screen_heart"
        app:layout_constraintTop_toTopOf="@id/contact_screen_heart"
        app:tcTypeface="adineuePROTTBlack" />

    <com.adidas.hackathon.smartjacket.ui.controls.AdidasButton
        android:id="@+id/change_fav_contact_button"
        style="@style/SquareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_margin_medium"
        android:layout_marginEnd="@dimen/material_margin_medium"
        android:layout_marginStart="@dimen/material_margin_medium"
        android:background="@color/colorPrimaryDark"
        android:text="@string/change_quick_dial"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>